--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
           node-version: 20.x
       - name: Install dependencies
         run: |
+          npm i -g pnpm
           pnpm install
           pnpm export
       - name: Deploy
