--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next build && touch out/.nojekyll",
-    "deploy": "gh-pages -d out -t true"
+    "ghp": "gh-pages -d out -t true"
   },
   "keywords": [],
   "author": "",
