--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "nextra-theme-blog": "^2.13.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
